overflow fix

--- a/application/frontend/src/css/Profile.css
+++ b/application/frontend/src/css/Profile.css
@@ -3,10 +3,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: calc(100vh - 70px);
   padding: 20px;
   /* FIXME: remove hardcoded alignment fix */
-  padding-top: 50px;
+  padding-top: 70px;
+  padding-bottom: 0px;
   padding-left: 150px;
 }
 
